--- a/gimli/BUILD
+++ b/gimli/BUILD
@@ -1,4 +1,7 @@
 load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
+load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 proto_library(
     name = "gimli_proto",
