--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,10 @@
 # To fix absl compilation.
 # See https://github.com/grpc/grpc/issues/37619#issuecomment-2327876843
 build --features=-module_maps
+
+# Required for bazel_clang_tidy to operate as expected
+build:clang-tidy --aspects @bazel_clang_tidy//clang_tidy:clang_tidy.bzl%clang_tidy_aspect
+build:clang-tidy --output_groups=report
+
+# Optionally override the .clang-tidy config file target
+build:clang-tidy --@bazel_clang_tidy//:clang_tidy_config=//:clang_tidy_config
