Add gazelle_cc integration, to help manage the BUILD.
Run `blaze run :gazelle` to fix dependencies. It's broken for grpc, so
it's not entirely reliable yet and need manual fixing. But it's a good
start.

--- a/gimli/BUILD
+++ b/gimli/BUILD
@@ -1,11 +1,10 @@
 load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
 load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
 load("@protobuf//bazel:proto_library.bzl", "proto_library")
-load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 
-proto_library(
-    name = "gimli_proto",
-    srcs = ["gimli.proto"],
+cc_proto_library(
+    name = "build_event_stream_cc_proto",
     deps = [
         "@bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_proto",
     ],
@@ -13,6 +12,7 @@ proto_library(
 
 cc_proto_library(
     name = "gimli_cc_proto",
+    visibility = ["//visibility:public"],
     deps = [":gimli_proto"],
 )
 
@@ -23,21 +23,17 @@ cc_grpc_library(
     deps = [":gimli_cc_proto"],
 )
 
-cc_proto_library(
-    name = "build_event_stream_cc_proto",
-    deps = [
-        "@bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_proto",
-    ],
-)
-
 cc_library(
     name = "publish_build_event_callback_service_impl",
     srcs = ["publish_build_event_callback_service_impl.cc"],
     hdrs = ["publish_build_event_callback_service_impl.h"],
+    visibility = ["//visibility:public"],
     deps = [
         ":build_event_stream_cc_proto",
         ":gimli_cc_proto",
+        "@abseil-cpp//absl/cleanup",
         "@abseil-cpp//absl/log",
+        "@abseil-cpp//absl/strings",
         "@googleapis//google/devtools/build/v1:build_cc_grpc",
         "@googleapis//google/devtools/build/v1:build_cc_proto",
     ],
@@ -47,18 +43,15 @@ cc_binary(
     name = "gimli_server",
     srcs = ["gimli_server.cc"],
     deps = [
-        ":build_event_stream_cc_proto",
         ":gimli_cc_grpc",
         ":gimli_cc_proto",
         ":publish_build_event_callback_service_impl",
         "@abseil-cpp//absl/flags:flag",
         "@abseil-cpp//absl/flags:parse",
         "@abseil-cpp//absl/log",
-        "@abseil-cpp//absl/log:flags",
+        "@abseil-cpp//absl/log:globals",
         "@abseil-cpp//absl/log:initialize",
-        "@googleapis//google/devtools/build/v1:build_cc_grpc",
-        "@googleapis//google/devtools/build/v1:build_cc_proto",
-        "@grpc//:grpc++",
+        "@abseil-cpp//absl/strings",
         "@grpc//:grpc++_reflection",
     ],
 )
@@ -72,5 +65,14 @@ cc_binary(
         "@abseil-cpp//absl/flags:flag",
         "@abseil-cpp//absl/flags:parse",
         "@grpc//:grpc++",
+    ],
+)
+
+proto_library(
+    name = "gimli_proto",
+    srcs = ["gimli.proto"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_proto",
     ],
 )
