--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,6 +19,8 @@ bazel_dep(name = "abseil-cpp", version = "20250814.1")
 bazel_dep(name = "googleapis", version = "0.0.0-20251111-659ea6e9")
 bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
+bazel_dep(name = "gazelle", version = "0.47.0")
+bazel_dep(name = "gazelle_cc", version = "0.1.0")
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
