--- a/gimli/testdata/BUILD
+++ b/gimli/testdata/BUILD
@@ -1,5 +1,11 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary")
 
+filegroup(
+    name = "testdata",
+    srcs = glob(["*.textproto"]),
+    visibility = ["//gimli:__pkg__"],
+)
+
 # Targets all have the "manual" tag,  see README.md in this directory.
 
 cc_binary(
