--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -18,6 +18,7 @@ bazel_dep(name = "gazelle_cc", version = "0.1.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20251111-659ea6e9")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
+bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
 bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
 bazel_dep(name = "protobuf", version = "33.1")
 bazel_dep(name = "rules_cc", version = "0.2.14")
