Add missing dependency manually, to minimize diffs when investigating [1]
[1] https://github.com/EngFlow/gazelle_cc/issues/155

--- a/gimli/BUILD
+++ b/gimli/BUILD
@@ -54,6 +54,7 @@ cc_test(
     deps = [
         ":publish_build_event_callback_service_impl",
         ":recording_cc_proto",
+        "@abseil-cpp//absl/base:log_severity",
         "@abseil-cpp//absl/log:globals",
         "@abseil-cpp//absl/log:initialize",
         "@abseil-cpp//absl/strings",
