--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -21,6 +21,7 @@ bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
 bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
 bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
 bazel_dep(name = "protobuf", version = "33.1")
+bazel_dep(name = "protobuf-matchers", version = "0.1.1")
 bazel_dep(name = "rules_cc", version = "0.2.14")
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
