Use the proper way to get resources in a Bazel-built test

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,8 @@
+module(
+    name = "gimli",
+    version = "1.0",
+)
+
 bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
 git_override(
     module_name = "hedron_compile_commands",
