--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,8 @@
 # To fix absl compilation.
 # See https://github.com/grpc/grpc/issues/37619#issuecomment-2327876843
 build --features=-module_maps
+build --define=grpc_no_xds=true
+test  --define=grpc_no_xds=true
 
 # Required for bazel_clang_tidy to operate as expected
 build:clang-tidy --aspects @bazel_clang_tidy//clang_tidy:clang_tidy.bzl%clang_tidy_aspect
